unpackaged/main/default/objects/sfsp__ListView__c/sfsp__ListView__c.object-meta.xml
<CustomObject>
    <label>List View</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>