unpackaged/main/default/objects/sfsp__ListView__c/fields/sfsp__Area__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Area__c</fullName>
    <label>Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allocation</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>