unpackaged/main/default/objects/sfsp__ListView__c/fields/sfsp__LastViewed__c.field-meta.xml
<CustomField>
    <fullName>sfsp__LastViewed__c</fullName>
    <label>Last Viewed</label>
    <type>DateTime</type>
</CustomField>